--- a/pa/units/land/anti_nuke_launcher/anti_nuke_launcher.json
+++ b/pa/units/land/anti_nuke_launcher/anti_nuke_launcher.json
@@ -130,7 +130,7 @@
 			"offset" : [1, 0, 0],
 			"orientation" : [0, 0, -90]
 		},{
-			"type" : "build",
+			"type" : "idle",
 			"bone" : "bone_radarPitch",
 			"filename" : "/pa/effects/specs/light_2_2_2.pfx",
 			"offset" : [3.5, 0, 0]
