--- a/pa/units/land/anti_nuke_launcher/anti_nuke_launcher.json
+++ b/pa/units/land/anti_nuke_launcher/anti_nuke_launcher.json
@@ -41,6 +41,12 @@
 				"channel": "radar",
 				"shape": "capsule",
 				"radius": 310
+			},
+			{
+				"layer": "underwater",
+				"channel": "sight",
+				"shape": "capsule",
+				"radius": 100
 			}]
 		}
 	},
@@ -134,25 +140,33 @@
 		"intensity": 5,
 		"bone": "bone_leftShoulder"
 	}],
-	"fx_offsets" : [{
-			"type" : "build",
-			"filename" : "/pa/effects/specs/fab_spray.pfx",
-			"bone" : "bone_rightWrist",
-			"offset" : [1, 0, 0],
-			"orientation" : [0, 0, -90]
-		}, {
-			"type" : "build",
-			"filename" : "/pa/effects/specs/fab_spray.pfx",
-			"bone" : "bone_leftWrist",
-			"offset" : [1, 0, 0],
-			"orientation" : [0, 0, -90]
-		},{
+	"fx_offsets": [{
+		"type": "build",
+		"filename": "/pa/effects/specs/fab_spray.pfx",
+		"bone": "bone_rightWrist",
+		"offset": [1,
+		0,
+		0],
+		"orientation": [0,
+		0,
+		-90]
+	},
+	{
+		"type": "build",
+		"filename": "/pa/effects/specs/fab_spray.pfx",
+		"bone": "bone_leftWrist",
+		"offset": [1,
+		0,
+		0],
+		"orientation": [0,
+		0,
+		-90]
+	}, {
 			"type" : "idle",
 			"bone" : "bone_radarPitch",
 			"filename" : "/pa/effects/specs/light_2_2_2.pfx",
 			"offset" : [3.5, 0, 0]
-		}
-	],
+		}],
 	"TEMP_texelinfo": 21.7597,
 	"mesh_bounds": [18.5,
 	19.5,
