--- a/pa/units/land/tactical_missile_launcher/tactical_missile_launcher.json
+++ b/pa/units/land/tactical_missile_launcher/tactical_missile_launcher.json
@@ -23,6 +23,12 @@
 				"channel": "sight",
 				"shape": "capsule",
 				"radius": 100
+			},
+			{
+				"layer": "underwater",
+				"channel": "sight",
+				"shape": "capsule",
+				"radius": 100
 			}]
 		}
 	},
@@ -47,6 +53,11 @@
 	}],
 	"tools": [{
 		"spec_id": "/pa/units/land/tactical_missile_launcher/tactical_missile_launcher_tool_weapon.json",
+		"aim_bone": "bone_missile01",
+		"muzzle_bone": "bone_missile01"
+	},
+	{
+		"spec_id": "/pa/units/land/tactical_missile_launcher/tactical_missile_tool_antidrop.json",
 		"aim_bone": "bone_missile01",
 		"muzzle_bone": "bone_missile01"
 	}],
