--- a/pa/units/land/nuke_launcher/nuke_launcher.json
+++ b/pa/units/land/nuke_launcher/nuke_launcher.json
@@ -1,7 +1,7 @@
 {
   "base_spec": "/pa/units/land/base_structure/base_structure.json",
-  "display_name": "!LOC(units:nuclear_missile_launcher.message):Nuclear Missile Launcher",
-  "description": "!LOC(units:nuclear_missile_launcher_equipped_with_advanced_long_range_large_area_damage_nuclear_missile.message):Nuclear missile launcher- Equipped with advanced long range, large area damage, nuclear missile.",
+  "display_name": "!LOC:Nuclear Missile Launcher",
+  "description": "!LOC:Nuclear missile launcher- Equipped with advanced long range, large area damage, nuclear missile.",
   "max_health": 1500,
   "build_metal_cost": 14400,
   "atrophy_rate": 240.0,
@@ -241,10 +241,17 @@
       "intensity": 5.0
     }
   ],
+  "selection_icon": {
+    "diameter": 27.0
+  },
   "mesh_bounds": [
     14,
     14,
     18
+  ],
+  "placement_size": [
+    25,
+    25
   ],
   "TEMP_texelinfo": 19.5004
 }
