--- a/pa/units/land/tactical_missile_launcher/tactical_missile_launcher.json
+++ b/pa/units/land/tactical_missile_launcher/tactical_missile_launcher.json
@@ -1,7 +1,7 @@
 {
   "base_spec": "/pa/units/land/base_structure/base_structure.json",
-  "display_name": "!LOC(units:catapult.message):Catapult",
-  "description": "!LOC(units:tactical_missile_launcher_equipped_with_advanced_long_range_anti_land_missile_launcher.message):Tactical missile launcher- Equipped with advanced long range anti-land missile launcher.",
+  "display_name": "!LOC:Catapult",
+  "description": "!LOC:Tactical Missile Launcher- Very heavy damage. Long-range. Attacks land, sea, and orbital targets.",
   "max_health": 1500,
   "build_metal_cost": 1800,
   "atrophy_rate": 30.0,
@@ -13,8 +13,7 @@
     "UNITTYPE_Tactical",
     "UNITTYPE_Defense",
     "UNITTYPE_Advanced",
-    "UNITTYPE_FabAdvBuild",
-    "UNITTYPE_Important"
+    "UNITTYPE_FabAdvBuild"
   ],
   "command_caps": [
     "ORDER_Attack"
@@ -89,11 +88,18 @@
       "cue": "/SE/Selection/structure/artillery"
     }
   },
+  "selection_icon": {
+    "diameter": 24.0
+  },
   "TEMP_texelinfo": 15.8261,
   "mesh_bounds": [
-    9,
-    9,
+    10,
+    10,
     8.7
+  ],
+  "placement_size": [
+    18,
+    18
   ],
   "fx_offsets": [
     {
