--- a/pa/units/land/anti_nuke_launcher/anti_nuke_launcher.json
+++ b/pa/units/land/anti_nuke_launcher/anti_nuke_launcher.json
@@ -1,124 +1,9 @@
 {
-  "base_spec": "/pa/units/land/base_structure/base_structure.json",
-  "display_name": "!LOC:Anti-Nuke Launcher",
-  "description": "!LOC:Anti-nuke launcher- Equipped with advanced anti-nuclear missile weapon.",
-  "max_health": 3500,
-  "build_metal_cost": 12000,
-  "atrophy_rate": 200,
-  "atrophy_cool_down": 15,
-  "area_build_type": "Sphere",
+  "TEMP_texelinfo": 21.7597,
   "area_build_separation": 100,
-  "spawn_layers": "WL_AnyHorizontalGroundOrWaterSurface",
-  "buildable_projectiles": [
-    "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_ammo.json"
-  ],
-  "factory_cooldown_time": 5,
-  "factory": {
-    "store_units": true,
-    "spawn_points": [
-      "socket_missile01",
-      "socket_missile02",
-      "socket_missile03"
-    ],
-    "initial_build_spec": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_ammo.json",
-    "default_build_stance": "Continuous"
-  },
-  "unit_types": [
-    "UNITTYPE_Land",
-    "UNITTYPE_Structure",
-    "UNITTYPE_Defense",
-    "UNITTYPE_NukeDefense",
-    "UNITTYPE_Advanced",
-    "UNITTYPE_Factory",
-    "UNITTYPE_FabAdvBuild",
-    "UNITTYPE_Important"
-  ],
-  "command_caps": [
-    "ORDER_FactoryBuild"
-  ],
-  "recon": {
-    "observer": {
-      "items": [
-        {
-          "layer": "surface_and_air",
-          "channel": "sight",
-          "shape": "capsule",
-          "radius": 100
-        },
-        {
-          "layer": "surface_and_air",
-          "channel": "radar",
-          "shape": "capsule",
-          "radius": 310
-        },
-        {
-          "layer": "underwater",
-          "channel": "sight",
-          "shape": "capsule",
-          "radius": 100
-        }
-      ]
-    }
-  },
-  "model": [
-    {
-      "layer": "WL_LandHorizontal",
-      "filename": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher.papa",
-      "skirt_decal": "/pa/effects/specs/skirt_antinuke.json",
-      "animations": {
-        "idle": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_idle.papa",
-        "build_start_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart01.papa",
-        "build_loop_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop01.papa",
-        "build_end_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd01.papa",
-        "build_start_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart02.papa",
-        "build_loop_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop02.papa",
-        "build_end_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd02.papa",
-        "build_start_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart03.papa",
-        "build_loop_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop03.papa",
-        "build_end_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd03.papa"
-      },
-      "animtree": "/pa/anim/anim_trees/anti_nuke_anim_tree.json"
-    },
-    {
-      "layer": "WL_WaterSurface",
-      "filename": "/pa/units/sea/anti_nuke_launcher/anti_nuke_launcher.papa",
-      "animations": {
-        "build_start_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart01.papa",
-        "build_loop_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop01.papa",
-        "build_end_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd01.papa",
-        "build_start_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart02.papa",
-        "build_loop_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop02.papa",
-        "build_end_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd02.papa",
-        "build_start_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart03.papa",
-        "build_loop_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop03.papa",
-        "build_end_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd03.papa"
-      },
-      "animtree": "/pa/anim/anim_trees/anti_nuke_anim_tree.json"
-    }
-  ],
-  "tools": [
-    {
-      "spec_id": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_build_arm.json",
-      "aim_bone": "bone_root"
-    },
-    {
-      "spec_id": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_tool_weapon.json",
-      "aim_bone": "bone_root",
-      "muzzle_bone": "bone_root"
-    }
-  ],
-  "events": {
-    "build_complete": {
-      "audio_cue": "/SE/Build_Complete/factory"
-    },
-    "fired": {
-      "audio_cue": "/SE/Weapons/structure/anti_nuke_launcher_fire"
-    },
-    "died": {
-      "audio_cue": "/SE/Death/Factory",
-      "effect_spec": "/pa/effects/specs/default_building_explosion.pfx"
-    }
-  },
+  "area_build_type": "Sphere",
+  "atrophy_cool_down": 15,
+  "atrophy_rate": 200,
   "audio": {
     "loops": {
       "build": {
@@ -132,43 +17,43 @@
       "cue": "/SE/Selection/structure/anti_nuke"
     }
   },
-  "lamps": [
-    {
-      "offset": [
-        1.64,
-        -0.7,
-        -0.87
-      ],
-      "radius": 3,
-      "color": [
-        0.1,
-        1,
-        0.1
-      ],
-      "intensity": 5,
-      "bone": "bone_rightShoulder"
-    },
-    {
-      "offset": [
-        1.64,
-        -0.7,
-        0.87
-      ],
-      "radius": 3,
-      "color": [
-        0.1,
-        1,
-        0.1
-      ],
-      "intensity": 5,
-      "bone": "bone_leftShoulder"
-    }
+  "base_spec": "/pa/units/land/base_structure/base_structure.json",
+  "build_metal_cost": 12000,
+  "buildable_projectiles": [
+    "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_ammo.json"
   ],
+  "command_caps": [
+    "ORDER_FactoryBuild"
+  ],
+  "description": "!LOC:Anti-nuke launcher- Equipped with advanced anti-nuclear missile weapon.",
+  "display_name": "!LOC:Anti-Nuke Launcher",
+  "events": {
+    "build_complete": {
+      "audio_cue": "/SE/Build_Complete/factory"
+    },
+    "died": {
+      "audio_cue": "/SE/Death/Factory",
+      "effect_spec": "/pa/effects/specs/default_building_explosion.pfx"
+    },
+    "fired": {
+      "audio_cue": "/SE/Weapons/structure/anti_nuke_launcher_fire"
+    }
+  },
+  "factory": {
+    "default_build_stance": "Continuous",
+    "initial_build_spec": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_ammo.json",
+    "spawn_points": [
+      "socket_missile01",
+      "socket_missile02",
+      "socket_missile03"
+    ],
+    "store_units": true
+  },
+  "factory_cooldown_time": 5,
   "fx_offsets": [
     {
-      "type": "build",
-      "filename": "/pa/effects/specs/fab_spray.pfx",
       "bone": "bone_rightWrist",
+      "filename": "/pa/effects/specs/fab_spray.pfx",
       "offset": [
         1,
         0,
@@ -178,12 +63,12 @@
         0,
         0,
         -90
-      ]
+      ],
+      "type": "build"
     },
     {
-      "type": "build",
-      "filename": "/pa/effects/specs/fab_spray.pfx",
       "bone": "bone_leftWrist",
+      "filename": "/pa/effects/specs/fab_spray.pfx",
       "offset": [
         1,
         0,
@@ -193,7 +78,8 @@
         0,
         0,
         -90
-      ]
+      ],
+      "type": "build"
     },
     {
       "type": "idle",
@@ -206,13 +92,127 @@
       ]
     }
   ],
-  "selection_icon": {
-    "diameter": 32.0
-  },
-  "TEMP_texelinfo": 21.7597,
+  "lamps": [
+    {
+      "bone": "bone_rightShoulder",
+      "color": [
+        0.1,
+        1,
+        0.1
+      ],
+      "intensity": 5,
+      "offset": [
+        1.64,
+        -0.7,
+        -0.87
+      ],
+      "radius": 3
+    },
+    {
+      "bone": "bone_leftShoulder",
+      "color": [
+        0.1,
+        1,
+        0.1
+      ],
+      "intensity": 5,
+      "offset": [
+        1.64,
+        -0.7,
+        0.87
+      ],
+      "radius": 3
+    }
+  ],
+  "max_health": 3500,
   "mesh_bounds": [
     18.5,
     19.5,
     15
+  ],
+  "model": [
+    {
+      "animations": {
+        "build_end_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd01.papa",
+        "build_end_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd02.papa",
+        "build_end_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd03.papa",
+        "build_loop_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop01.papa",
+        "build_loop_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop02.papa",
+        "build_loop_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop03.papa",
+        "build_start_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart01.papa",
+        "build_start_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart02.papa",
+        "build_start_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart03.papa",
+        "idle": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_idle.papa"
+      },
+      "animtree": "/pa/anim/anim_trees/anti_nuke_anim_tree.json",
+      "filename": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher.papa",
+      "layer": "WL_LandHorizontal",
+      "skirt_decal": "/pa/effects/specs/skirt_antinuke.json"
+    },
+    {
+      "animations": {
+        "build_end_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd01.papa",
+        "build_end_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd02.papa",
+        "build_end_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildEnd03.papa",
+        "build_loop_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop01.papa",
+        "build_loop_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop02.papa",
+        "build_loop_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildLoop03.papa",
+        "build_start_1": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart01.papa",
+        "build_start_2": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart02.papa",
+        "build_start_3": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_anim_buildStart03.papa"
+      },
+      "animtree": "/pa/anim/anim_trees/anti_nuke_anim_tree.json",
+      "filename": "/pa/units/sea/anti_nuke_launcher/anti_nuke_launcher.papa",
+      "layer": "WL_WaterSurface"
+    }
+  ],
+  "recon": {
+    "observer": {
+      "items": [
+        {
+          "channel": "sight",
+          "layer": "surface_and_air",
+          "radius": 100,
+          "shape": "capsule"
+        },
+        {
+          "channel": "radar",
+          "layer": "surface_and_air",
+          "radius": 310,
+          "shape": "capsule"
+        },
+        {
+          "channel": "sight",
+          "layer": "underwater",
+          "radius": 100,
+          "shape": "capsule"
+        }
+      ]
+    }
+  },
+  "selection_icon": {
+    "diameter": 28.0
+  },
+  "spawn_layers": "WL_AnyHorizontalGroundOrWaterSurface",
+  "tools": [
+    {
+      "aim_bone": "bone_root",
+      "spec_id": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_build_arm.json"
+    },
+    {
+      "aim_bone": "bone_root",
+      "muzzle_bone": "bone_root",
+      "spec_id": "/pa/units/land/anti_nuke_launcher/anti_nuke_launcher_tool_weapon.json"
+    }
+  ],
+  "unit_types": [
+    "UNITTYPE_Land",
+    "UNITTYPE_Structure",
+    "UNITTYPE_Defense",
+    "UNITTYPE_NukeDefense",
+    "UNITTYPE_Advanced",
+    "UNITTYPE_Factory",
+    "UNITTYPE_FabAdvBuild",
+    "UNITTYPE_Important"
   ]
 }
