--- a/pa/units/orbital/orbital_launcher/orbital_launcher.json
+++ b/pa/units/orbital/orbital_launcher/orbital_launcher.json
@@ -13,7 +13,7 @@
     }
   },
   "base_spec": "/pa/units/land/base_structure/base_structure.json",
-  "build_metal_cost": 2700,
+  "build_metal_cost": 600,
   "buildable_types": "Orbital & FactoryBuild & Basic",
   "command_caps": [
     "ORDER_Move",
@@ -418,7 +418,8 @@
     "UNITTYPE_FabBuild",
     "UNITTYPE_FabAdvBuild",
     "UNITTYPE_Basic",
-    "UNITTYPE_Important"
+    "UNITTYPE_Important",
+    "UNITTYPE_CmdBuild"
   ],
   "wait_to_rolloff_time": 3
 }
